[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "combat-engine"
version = "0.1.0"
description = "OSRS combat engine — damage calculations, accuracy, and monster simulation"
requires-python = ">=3.12"
dependencies = [
]

[tool.setuptools.packages.find]
include = ["CombatSim*"]
